Agregado el registro y Areglando notificaciones

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -15,3 +15,15 @@
         </div>
     </div>
 </div>
+@*Para el uso de las notificaciones*@
+@using Blazored.Toast.Configuration
+
+<BlazoredToasts Position="ToastPosition.TopRight"
+                Timeout="5"
+                IconType="IconType.FontAwesome"
+                SuccessClass="success-toast-override"
+                SuccessIcon="fa fa-check"
+                ErrorIcon="fa fa-times"
+                InfoIcon="fa fa-info"
+                WarningIcon="fa fa-warning" />
+
