--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-document" aria-hidden="true"></span> Registro de Productos
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Consultar">
+                <span class="oi oi-document" aria-hidden="true"></span> Consulta de Produtos
+            </NavLink>
+        </li>
     </ul>
 </div>
 
