Agrege los botones eliminar y modificar a consulta haciendolos funsionales

--- a/Shared/Consultas/CProductos.razor
+++ b/Shared/Consultas/CProductos.razor
@@ -3,6 +3,10 @@
 @using Models
 @using BLL
 
+@inject IToastService Toast
+@inject NavigationManager Nav
+@inject IJSRuntime Confirmacion
+
 
 <div class="card">
     <div class="card-header">
@@ -57,14 +61,19 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var Producto in Lista)
+                        @foreach (var item in Lista)
                         {
                             <tr>
-                                <td>@Producto.ProductoId</td>
-                                <td>@Producto.Descripcion</td>
-                                <td>@Producto.Existencia</td>
-                                <td>@Producto.Costo</td>
-                                <td>@Producto.ValorInventario</td>
+                                <td>@item.ProductoId</td>
+                                <td>@item.Descripcion</td>
+                                <td>@item.Existencia</td>
+                                <td>@item.Costo</td>
+                                <td>@item.ValorInventario</td>
+                                <td>
+                                    <a type="button" href="@($"Productos/{item.ProductoId}")" class="btn btn-primary oi oi-pencil"></a>
+                                    <button @onclick="() => Eliminar(item.ProductoId)" class="btn btn-danger oi oi-trash"></button>
+                                </td>
+
                             </tr>
                         }
                     </tbody>
@@ -116,6 +125,26 @@
         Lista = new List<Productos>();
     }
 
+    async Task Eliminar(int id)
+    {
+        Nav.ToAbsoluteUri($"R_Productos/{id}");
+
+        bool confirmed = await Confirmacion.InvokeAsync<bool>("confirm", "Estas seguro de que deseas eliminar este Producto?");
+        if (confirmed)
+        {
+            bool eliminado;
+            eliminado = ProductosBLL.Eliminar(id);
+
+            if (eliminado)
+            {
+
+                Toast.ShowSuccess("Registro Eliminado exitosamente.");
+            }
+            else
+                Toast.ShowError("No fue posible Eliminar este Registro.");
+            return;
+        }
+    }
     private void Calcular()
     {
         decimal Suma = 0;
